--- a/02_Hotel_Registration_Form/index.html
+++ b/02_Hotel_Registration_Form/index.html
@@ -56,6 +56,18 @@
         <button class="calculate" onclick="calculateAmount();">
           Calculate
         </button>
+        <details>
+          <summary>View Details</summary>
+          <p>Room Type:</p>
+          <li>Delux= 6000rs</li>
+          <li>Suite= 10000rs</li>
+
+          <p>Amenities:</p>
+          <li>AC= 1500rs</li>
+          <li>Locker= 700rs</li>
+
+          <p>Charge per Extra Person per Day: 1000</p>
+        </details>
       </form>
     </div>
 
